melior/src/dialect/snapshots/melior__dialect__llvm__tests__compile_addressof.snap
---
source: melior/src/dialect/llvm.rs
expression: module.as_operation()
---
module {
  llvm.mlir.global internal constant @my_global(42 : i64) {addr_space = 0 : i32, alignment = 1 : i64} : i64
  llvm.func @get_global_addr() -> !llvm.ptr {
    %0 = llvm.mlir.addressof @my_global : !llvm.ptr
    llvm.return %0 : !llvm.ptr
  }
}
