melior/src/dialect/snapshots/melior__dialect__llvm__tests__compile_bitcast.snap
---
source: melior/src/dialect/llvm.rs
expression: module.as_operation()
---
module {
  llvm.func @int_bits_to_float(%arg0: i32) -> f32 {
    %0 = llvm.bitcast %arg0 : i32 to f32
    llvm.return %0 : f32
  }
}
