melior/src/dialect/snapshots/melior__dialect__llvm__tests__compile_call_intrinsic.snap
---
source: melior/src/dialect/llvm.rs
expression: module.as_operation()
---
module {
  llvm.func @use_intrinsic(%arg0: i32) -> i32 {
    %0 = llvm.call_intrinsic "llvm.bitreverse.i32"(%arg0) : (i32) -> i32
    llvm.return %0 : i32
  }
}
