melior/src/dialect/snapshots/melior__dialect__llvm__tests__compile_constant.snap
---
source: melior/src/dialect/llvm.rs
expression: module.as_operation()
---
module {
  llvm.func @get_constant() -> i32 {
    %0 = llvm.mlir.constant(42 : i32) : i32
    llvm.return %0 : i32
  }
}
