melior/src/dialect/snapshots/melior__dialect__llvm__tests__compile_indirect_call.snap
---
source: melior/src/dialect/llvm.rs
expression: module.as_operation()
---
module {
  llvm.func @call_fn_ptr(%arg0: !llvm.ptr, %arg1: i32) -> i32 {
    %0 = llvm.call %arg0(%arg1) : !llvm.ptr, (i32) -> i32
    llvm.return %0 : i32
  }
}
